test/expected/declare_fkr_pi.out
declare f as function (x) returning pointer to int
                       ^
24: error: type specifier required by C2X
